# fp

./: .gitignore  CMakeLists.txt  README.md
cmake/: jkj_fpConfig.cmake
include/jkj/fp/: decimal_fp.h  dooly.h  dragonbox.h  ieee754_format.h  policy.h  ryu_printf.h
include/jkj/fp/detail/: bits.h  div.h  dragonbox_cache.h  dragonbox_policy.h  log.h  macros.h  policy.h  policy_holder.h  ryu_printf_cache.h  ryu_printf_compact_cache.h  ryu_printf_fast_cache.h  undef_macros.h  util.h  wuint.h
include/jkj/fp/from_chars/: from_chars.h
include/jkj/fp/to_chars/: fixed_precision.h  shortest_precise.h  shortest_roundtrip.h  to_chars_common.h
source/to_chars/: shortest_roundtrip.cpp  to_chars.cpp
subproject/benchmark/: CMakeLists.txt
subproject/benchmark/include/: fixed_precision_benchmark.h  from_chars_limited_precision_benchmark.h  from_chars_unlimited_precision_benchmark.h  shortest_roundtrip_benchmark.h  to_chars_fixed_precision_benchmark.h  to_chars_shortest_roundtrip_benchmark.h
subproject/benchmark/matlab/: plot_fixed_precision_benchmark.m  plot_shortest_roundtrip_benchmarks.m  plot_to_chars_shortest_roundtrip_benchmarks.m
subproject/benchmark/source/: fixed_precision_benchmark.cpp  fmt_fixed_precision.cpp  fp_fixed_precision.cpp  fp_from_chars_limited_precision.cpp  fp_from_chars_unlimited_precision.cpp  fp_shortest_roundtrip.cpp  fp_to_chars_fixed_precision.cpp  fp_to_chars_shortest_roundtrip.cpp  from_chars_limited_precision_benchmark.cpp  from_chars_unlimited_precision_benchmark.cpp  grisu_exact_shortest_roundtrip.cpp  ryu_fixed_precision.cpp  ryu_shortest_roundtrip.cpp  ryu_stof.cpp  schubfach_shortest_roundtrip.cpp  shortest_roundtrip_benchmark.cpp  std_from_chars.cpp  stod.cpp  to_chars_fixed_precision_benchmark.cpp  to_chars_shortest_roundtrip_benchmark.cpp
subproject/common/: CMakeLists.txt
subproject/common/include/: bigint.h  cache_write_helper.h  minmax_euclid.h  random_float.h
subproject/meta/: CMakeLists.txt
subproject/meta/results/: dragonbox_binary32_fast_cache.txt  dragonbox_binary64_fast_cache.txt  ryu_printf_binary32_cache.txt  ryu_printf_binary32_fast_cache.txt  ryu_printf_binary64_cache.txt  ryu_printf_binary64_fast_cache.txt
subproject/meta/ryu_printf/generate_cache/: cache_write_helper.h  main.cpp
subproject/meta/ryu_printf/results/: binary64_cache.txt
subproject/meta/sandbox/: main.cpp
subproject/meta/source/: dragonbox_generate_cache.cpp  dragonbox_generate_compact_cache_error_table.cpp  from_chars_limited_precision_live_test.cpp  from_chars_unlimited_precision_live_test.cpp  ryu_printf_generate_cache.cpp  ryu_printf_generate_fast_cache.cpp  sandbox.cpp  to_chars_fixed_precision_live_test.cpp  to_chars_shortest_live_test.cpp
subproject/test/: CMakeLists.txt
subproject/test/source/: dragonbox_dooly_binary32_exhaustive_test.cpp  dragonbox_dooly_binary64_uniform_random_joint_test.cpp  dragonbox_test_all_shorter_interval_cases.cpp  dragonbox_uniform_random_test.cpp  dragonbox_verify_fast_multiplication.cpp  dragonbox_verify_magic_division.cpp  ryu_printf_dooly_uniform_random_joint_test.cpp  ryu_printf_uniform_random_test.cpp  test_bigint.cpp  test_minmax_euclid.cpp  test_policy_holder.cpp  uniform_random_test_ryu_printf.cpp  verify_log_computation.cpp
test/: bigint.h  main.cpp
test/ryu_printf/: generate_cache.cpp
test_results/: binary32_cache.txt
tests/: main.cpp  minmax_euclid.h  verify_log_computation.cpp
tests/ryu_printf/: cache_write_helper.h
vc2019/: fp.sln  fp.vcxproj  fp.vcxproj.filters
vc2019/subproject/: subproject.props
vc2019/subproject/benchmark/ryu_printf/: ryu_printf.vcxproj  ryu_printf.vcxproj.filters
vc2019/subproject/meta/ryu_printf/generate_cache/: generate_cache.vcxproj  generate_cache.vcxproj.filters
vc2019/subproject/meta/sandbox/: sandbox.vcxproj  sandbox.vcxproj.filters
vc2019/subproject/test/verify_log_computation/: verify_log_computation.vcxproj
